# ppaass-ai

./: .gitignore  API.md  Cargo.toml  DEPENDENCY_VERSIONS.md  KEYGEN_INTEGRATION.md  Makefile  PERFORMANCE_IMPROVEMENTS.md  PROJECT_SUMMARY.md  PROTOCOL_DETECTION_UPDATE.md  README.md  SETUP.md  STACK_OVERFLOW_FIX.md  SUMMARY.md  agent.example.toml  build-agent-ui.bat  build-agent-ui.sh  build-release-apk-windows.bat  build.ps1  build.sh  performance-local-yamux32-connect-range-buffer64.html  performance-local-yamux32-connect-range-buffer64.json  performance-local-yamux32-connect-range-buffer64.md  performance-local-yamux32-connect-range-final.html  performance-local-yamux32-connect-range-final.json  performance-local-yamux32-connect-range-final.md  performance-local-yamux32-large-range-final.html  performance-local-yamux32-large-range-final.json  performance-local-yamux32-large-range-final.md  performance-local-yamux32-mixed-buffer64.html  performance-local-yamux32-mixed-buffer64.json  performance-local-yamux32-mixed-buffer64.md  performance-local-yamux32-mixed-egress-retry18.html  performance-local-yamux32-mixed-egress-retry18.json  performance-local-yamux32-mixed-egress-retry18.md  performance-local-yamux32-mixed-timeout60-final.html  performance-local-yamux32-mixed-timeout60-final.json  performance-local-yamux32-mixed-timeout60-final.md  performance-local-yamux32-socks5-tcp.html  performance-local-yamux32-socks5-tcp.json  performance-local-yamux32-socks5-tcp.md  (+29 more)
.cargo/: config.toml
.github/: instructions.md
.zed/: debug.json
agent/: Cargo.toml
agent-ui/: README.md  (+4 more)
agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
agent-ui/src-tauri/icons/: generate_icons.py
agent-ui/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
agent/src/: cli.rs  config.rs  connection_pool.rs  direct_access.rs  error.rs  http_handler.rs  http_proxy.rs  main.rs  multiplexer.rs  pool.rs  proxy_connection.rs  server.rs  socks5_handler.rs  socks5_proxy.rs  telemetry.rs  tui.rs  tun_handler.rs  unified_proxy.rs
agent/src/config/: agent_config.rs  mod.rs
agent/src/connection_pool/: connected_stream.rs  data_packet_sink.rs  mod.rs  pool.rs  proxy_connection.rs  proxy_stream_io.rs  response_stream.rs
agent/src/error/: agent_error.rs  mod.rs
agent/src/tui/: config_tab.rs  console.rs  event_handler.rs  helpers.rs  layout.rs  mod.rs  render.rs  types.rs
agent/src/tun_handler/: dns.rs  dns_proxy.rs  network.rs  route.rs  tasks.rs  tcp.rs  udp.rs  udp_relay.rs
android-agent/native/: Cargo.toml
android-agent/native/src/: android_log.rs  config.rs  connection_pool.rs  direct_access.rs  error.rs  fd_device.rs  http_proxy.rs  http_proxy_body.rs  http_proxy_clients.rs  http_proxy_io.rs  jni_api.rs  lib.rs  netstack.rs  socket_protector.rs  socks5_proxy.rs  tcp_relay.rs  traffic_stats.rs  udp_pool.rs  yamux_session.rs
android-agent/native/src/netstack/: bridge.rs  direct_domain_cache.rs  dns_proxy.rs  domain_sniff.rs  network.rs  supervisor.rs  tcp.rs  udp.rs  udp_relay.rs
common/: Cargo.toml
common/src/: bandwidth.rs  codec.rs  config.rs  crypto.rs  datagram_stream.rs  dns.rs  error.rs  lib.rs  protocol.rs  quic.rs  task_guard.rs  tcp_keepalive.rs  tcp_listener.rs  tcp_relay.rs  transport.rs  tun_control.rs  yamux_settings.rs
common/src/client_connection/: authenticated.rs  client.rs  config.rs  mod.rs  quic.rs  socket_bind.rs  stream.rs  udp.rs  yamux.rs
common/src/error/: common_error.rs  mod.rs
desktop-agent/: Cargo.toml
desktop-agent-ui/src-tauri/: Cargo.toml  tauri.conf.json
desktop-agent-ui/src-tauri/capabilities/: default.json
desktop-agent-ui/src-tauri/icons/: icon.icns
desktop-agent-ui/src-tauri/src/: agent.rs  app.rs  config.rs  diagnostics.rs  logging.rs  macos_helper.rs  main.rs  models.rs  network.rs  process_util.rs  runtime.rs  telemetry.rs  tray.rs  windows_service.rs
desktop-agent/src/: cli.rs  direct_access.rs  main.rs  server.rs  socks5_handler.rs  telemetry.rs  tun_handler.rs  tun_helper_client.rs
desktop-agent/src/config/: agent_config.rs
desktop-agent/src/connection_pool/: connected_stream.rs  pool.rs  proxy_connection.rs
desktop-agent/src/tun_handler/: dns_proxy.rs  helper_service.rs  network.rs  route.rs  tasks.rs  tcp.rs  udp_relay.rs
protocol/: Cargo.toml
protocol/examples/: generate_keys.rs
protocol/src/: codec.rs  compression.rs  crypto.rs  error.rs  lib.rs  message.rs  yamux.rs
protocol/src/codec/: agent_codec.rs  cipher_state.rs  crypto_message_codec.rs  message_codec.rs  mod.rs  proxy_codec.rs  server_codec.rs
protocol/src/crypto/: aes_gcm_cipher.rs  crypto_manager.rs  mod.rs  rsa_key_pair.rs  tests.rs  utils.rs  values.rs
protocol/src/error/: mod.rs  protocol_error.rs
protocol/src/message/: address.rs  auth_request.rs  auth_response.rs  connect_request.rs  connect_response.rs  data_packet.rs  envelope.rs  message_type.rs  mod.rs  proxy_request.rs  proxy_response.rs  udp_relay_packet.rs  values.rs
protocol/src/udp_transport/: auth.rs  crypto.rs  error.rs  header.rs  message.rs  mod.rs  reassembly.rs  replay.rs  tests.rs
proxy/: Cargo.toml
proxy/src/: api.rs  bandwidth.rs  config.rs  connection.rs  connection_limiter.rs  error.rs  main.rs  native_udp.rs  relay.rs  server.rs  session.rs  telemetry.rs  tui.rs  user_manager.rs
proxy/src/bandwidth/: bandwidth_monitor.rs  mod.rs  user_bandwidth.rs
proxy/src/config/: mod.rs  proxy_config.rs  user_config.rs  users_config.rs
proxy/src/connection/: agent_io.rs  auth.rs  connect.rs  egress.rs  mod.rs  relay.rs  response_sink.rs  responses.rs  target.rs  udp_relay.rs  udp_relay_flow.rs  upstream.rs  yamux.rs  yamux_session.rs
proxy/src/connection/egress/: auto.rs  bind.rs  route_guard.rs  source.rs  stream.rs
proxy/src/entity/: user.rs
proxy/src/error/: mod.rs  proxy_error.rs
proxy/src/native_udp/: auth.rs  channel.rs  listener.rs  session.rs
tests/: Cargo.toml  README.md  performance-report.html  performance-report.json  performance-report.md
tests/src/: integration_tests.rs  main.rs  mock_client.rs  mock_target.rs  performance_tests.rs  report.rs
(+245 files in other folders)
