[workspace]
members = [
    "desktop-agent",
    "proxy",
    "common",
    "protocol",
    "tests",
    "android-agent/native",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PPAASS Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitcode = { version = "0.6", features = ["serde"] }
config = "0.15"
clap = { version = "4.6", features = ["derive"] }
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
thiserror = "2.0"
anyhow = "1.0"
bytes = "1.11"
fast-socks5 = "1.0"
hyper = { version = "1.9", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"
deadpool = "0.13"
toml = "1.1.2"
rsa = "0.9"
aes-gcm = "0.10"
rand = "0.10"
sha2 = "0.11"
base64 = "0.22"
async-trait = "0.1"
parking_lot = "0.12"
dashmap = "6.1"
zstd = "0.13"
lz4_flex = "0.13"
flate2 = "1.1"
mimalloc = "0.1"
futures = "0.3"
hex = "0.4"
pretty-hex = "0.4"
ratatui = "0.30"
crossterm = "0.29"
tun-rs = { version = "2.8", features = ["async_tokio"] }
netstack-smoltcp = "0.2"
route_manager = "0.2"
socket2 = { version = "0.6", features = ["all"] }
if-addrs = "0.15"
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
] }
tempfile = "3.27"
