[workspace]
members = [
    "desktop-agent-be",
    "proxy",
    "common",
    "protocol",
    "tests",
    "android-agent/native",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PPAASS Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-yamux = "0.3.18"
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bitcode = { version = "0.6.9", features = ["serde"] }
config = "0.15.24"
# clap 4.6.x pulls proc-macro2 1.0.106+, which conflicts with tun-rs 2.8.x's
# Windows c2rust-bitfields proc-macro pins. Keep the newest compatible release.
clap = { version = "=4.5.55", features = ["derive"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
thiserror = "2.0.18"
anyhow = "1.0.102"
bytes = "1.12.0"
fast-socks5 = "1.0"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
deadpool = "0.13"
toml = "1.1.2"
time = { version = "0.3.49", features = ["parsing"] }
rsa = "0.9.10"
aes-gcm = "0.10.3"
rand = "0.10.1"
sha2 = "0.11.0"
base64 = "0.22.1"
async-trait = "0.1.89"
parking_lot = "0.12.5"
dashmap = "6.2.1"
zstd = "0.13.3"
lz4_flex = "0.13.1"
flate2 = "1.1.9"
mimalloc = "0.1.52"
futures = "0.3.32"
hex = "0.4.3"
pretty-hex = "0.4.2"
ratatui = "0.30.2"
crossterm = "0.29"
hdrhistogram = "7.5.4"
sysinfo = "0.39.4"
async-socks5 = "0.6.0"
jni = "0.22.4"
tun-rs = { version = "2.8.5", features = ["async_tokio"] }
netstack-smoltcp = "0.2.2"
route_manager = "0.2.11"
socket2 = { version = "0.6.4", features = ["all"] }
if-addrs = "0.15"
nix = { version = "0.31.3", default-features = false, features = ["socket", "uio"] }
libc = "0.2.186"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
] }
tempfile = "3.27.0"
