[workspace]
members = [
    "desktop-agent-be",
    "proxy",
    "common",
    "protocol",
    "tests",
    "android-agent/native",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["PPAASS Team"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-yamux = "0.3.18"
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
bitcode = { version = "0.6.9", features = ["serde"] }
config = "0.15.24"
# clap 4.6.x pulls proc-macro2 1.0.106+, which conflicts with tun-rs 2.8.x's
# Windows c2rust-bitfields proc-macro pins. Keep the newest compatible release.
clap = { version = "=4.5.55", features = ["derive"] }
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
tracing-appender = "0.2.5"
thiserror = "2.0.18"
anyhow = "1.0.102"
bytes = "1.12.0"
fast-socks5 = "1.0"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["full"] }
http-body-util = "0.1.3"
deadpool = "0.13"
toml = "1.1.2"
time = { version = "0.3.49", features = ["parsing"] }
rsa = "0.9.10"
aes-gcm = "0.10.3"
rand = "0.10.1"
sha2 = "0.11.0"
base64 = "0.22.1"
async-trait = "0.1.89"
parking_lot = "0.12.5"
dashmap = "6.2.1"
zstd = "0.13.3"
lz4_flex = "0.13.1"
flate2 = "1.1.9"
mimalloc = "0.1.52"
futures = "0.3.32"
hex = "0.4.3"
pretty-hex = "0.4.2"
hickory-proto = { version = "0.26.1", default-features = false, features = ["std"] }
ratatui = "0.30.2"
crossterm = "0.29"
hdrhistogram = "7.5.4"
sysinfo = "0.39.4"
async-socks5 = "0.6.0"
jni = "0.22.4"
tun-rs = { version = "2.8.5", features = ["async_tokio"] }
netstack-smoltcp = "0.2.2"
route_manager = "0.2.11"
socket2 = { version = "0.6.4", features = ["all"] }
quinn = { version = "0.11.9", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
# macOS 没有公开的 UDP GSO/GRO 接口。Quinn 的 macOS 快速数据通路使用
# sendmsg_x/recvmsg_x 一次批量收发最多 32 个数据报，避免高速下载退化为逐包系统调用。
# 该 feature 只在 common 的 macOS target dependency 中启用，不影响 Windows/Linux/Android。
# 这两个接口是 Apple 私有 API；未来若提供 Mac App Store 构建，必须为该构建禁用此 feature。
quinn-udp = { version = "0.5.15", default-features = false, features = ["fast-apple-datapath"] }
rustls = { version = "0.23.35", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.14.5", default-features = false, features = ["crypto", "pem", "ring"] }
if-addrs = "0.15"
nix = { version = "0.31.3", default-features = false, features = ["socket", "uio"] }
libc = "0.2.186"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_UI_Shell",
] }
tempfile = "3.27.0"
