[package]
name = "agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true }
tokio-util = { workspace = true }
config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tokio-console = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
deadpool = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
tower = { workspace = true }
toml = "0.8"
uuid = { version = "1.11", features = ["v4"] }
console-subscriber = "0.4"
fast-socks5 = "1.0"
