[package]
name = "agent"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

tokio.workspace = true
tokio-util.workspace = true
futures = "0.3"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
config.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
console-subscriber = { workspace = true, optional = true }
fast-socks5.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
deadpool.workspace = true
toml.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dashmap.workspace = true

[features]
default = []
console = ["dep:console-subscriber"]
