[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
config.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
