[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
bitcode.workspace = true
bytes.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
rand.workspace = true
sha2.workspace = true
base64.workspace = true
