[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

tokio.workspace = true
tokio-util.workspace = true
futures = "0.3"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
config.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
console-subscriber = { workspace = true, optional = true }
toml.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rsa.workspace = true
base64.workspace = true
sea-orm.workspace = true
chrono.workspace = true
mimalloc.workspace = true
rand.workspace = true
[features]
default = []
console = ["dep:console-subscriber"]

[dev-dependencies]
tempfile = "3.19"
