[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
config.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
toml.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
rsa.workspace = true
base64.workspace = true
mimalloc.workspace = true
rand.workspace = true
pretty-hex.workspace = true
socket2.workspace = true
if-addrs.workspace = true
route_manager.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
[dev-dependencies]
tempfile.workspace = true
