[package]
name = "proxy"
version.workspace = true
edition.workspace = true

[features]
default = ["mimalloc-allocator"]
zstd-compression = ["protocol/zstd-compression"]
mimalloc-allocator = ["dep:mimalloc"]

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

tokio.workspace = true
tokio-yamux.workspace = true
tokio-util.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
config.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
toml.workspace = true
time.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
dashmap.workspace = true
mimalloc = { workspace = true, optional = true }
rand.workspace = true
pretty-hex.workspace = true
socket2.workspace = true
if-addrs.workspace = true
route_manager.workspace = true

[target.'cfg(windows)'.dependencies]
windows-sys.workspace = true
[dev-dependencies]
tempfile.workspace = true
