[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "integration-tests"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

tokio.workspace = true
tokio-util.workspace = true
futures = "0.3"
hex = "0.4"
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bytes.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
clap.workspace = true
rand.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
base64.workspace = true
pretty-hex.workspace = true

# For statistics and reporting
hdrhistogram = "7.5"
sysinfo = "0.33"

# Socks5 client
async-socks5 = "0.5"

[dev-dependencies]
tempfile = "3.19"
