[package]
name = "integration-tests"
version.workspace = true
edition.workspace = true
publish = false

[[bin]]
name = "integration-tests"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
common = { path = "../common" }

tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
bytes.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
clap.workspace = true
rand.workspace = true
rsa.workspace = true
aes-gcm.workspace = true
base64.workspace = true
pretty-hex.workspace = true

# 用于统计与报告
hdrhistogram.workspace = true
sysinfo.workspace = true

# SOCKS5 客户端
async-socks5.workspace = true

[dev-dependencies]
tempfile.workspace = true
