[package]
name = "android-agent"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../../common" }
protocol = { path = "../../protocol", features = ["zstd-compression"] }

bytes.workspace = true
dashmap.workspace = true
futures.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
netstack-smoltcp.workspace = true
serde.workspace = true
serde_json.workspace = true
socket2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-yamux.workspace = true
tokio-util.workspace = true
tracing.workspace = true

jni.workspace = true
libc.workspace = true
