[package]
name = "desktop-agent-ui"
version = "0.1.0"
description = "PPAASS Desktop Agent UI"
authors = ["PPAASS"]
license = "MIT"
repository = ""
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.2"
tauri = { version = "2.6.2", features = [] }
toml = "0.8"
