[package]
name = "desktop-agent-ui"
version = "0.1.0"
description = "PPAASS Desktop Agent UI"
authors = ["PPAASS"]
license = "MIT"
repository = ""
edition = "2021"

[workspace]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
desktop-agent-be = { path = "../../desktop-agent-be" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.3", features = ["image-png", "tray-icon"] }
tauri-plugin-single-instance = "2.4.2"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-util = { version = "0.7.18", features = ["codec", "io"] }
toml = "1.1.2"
tracing = { version = "0.1.44", features = ["attributes"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_UI_Shell"] }
windows-service = "0.8.1"

[dev-dependencies]
tempfile = "3.27.0"
